--- a/style.css
+++ b/style.css
@@ -190,6 +190,11 @@ form > button {
 form > input {
   margin: auto auto 0.5rem;  
   transition: all .3s;
+  color: var(--Neutral-Very-Dark-Violet);
+}
+
+form > input:focus {
+  color: var(--Neutral-Very-Dark-Violet);
 }
 
 form > button {
@@ -209,6 +214,10 @@ form > button:hover {
     /* FORM RESULT AND ERROR*/
 form > input.error {
   border: 2px solid var(--Secondary-Red);
+}
+
+form > input.error::placeholder {
+  color: var(--Secondary-Red);
 }
 
 span {
@@ -373,6 +382,7 @@ footer > svg {
   font-weight: 700;
   transition: all .3s;
   padding: .5rem 0;
+  cursor: pointer;
 }
 
 .copy-link:hover {
